Update Page to be "directory" instead than "supported-networks"

--- a/src/content/ccip/architecture.mdx
+++ b/src/content/ccip/architecture.mdx
@@ -6,7 +6,7 @@ whatsnext:
   {
     "CCIP manual execution": "/ccip/concepts/manual-execution",
     "Learn CCIP best practices": "/ccip/best-practices",
-    "Find the list of supported networks, lanes, and rate limits on the CCIP Supported Networks page": "/ccip/supported-networks",
+    "Find the list of supported networks, lanes, and rate limits on the CCIP Supported Networks page": "/ccip/directory",
   }
 ---
 
@@ -120,12 +120,12 @@ The mechanism for handling tokens varies depending on the characteristics of eac
 
 <section id="onboarding-new-tokens">
   <Aside type="note" title="Onboarding New Tokens">
-    Supported tokens for each lane are listed on the [CCIP supported network pages](/ccip/supported-networks). Expanding
-    support for additional tokens is an ongoing process to help ensure the highest level of cross-chain security. [Token
-    pool rate limits](/ccip/architecture/#token-pool-rate-limit) are configured per-token for each lane. These rate
-    limits are set together with token issuers where applicable. Rate limits are also selected based on various factors,
-    such as the unique risk characteristics of the token and the intended use cases. The onboarding process for adding
-    new tokens also helps ensure that dApps and users interact with the correct token version, reducing risks within the
+    Supported tokens for each lane are listed on the [CCIP supported network pages](/ccip/directory). Expanding support
+    for additional tokens is an ongoing process to help ensure the highest level of cross-chain security. [Token pool
+    rate limits](/ccip/architecture/#token-pool-rate-limit) are configured per-token for each lane. These rate limits
+    are set together with token issuers where applicable. Rate limits are also selected based on various factors, such
+    as the unique risk characteristics of the token and the intended use cases. The onboarding process for adding new
+    tokens also helps ensure that dApps and users interact with the correct token version, reducing risks within the
     cross-chain ecosystem.
   </Aside>
 </section>
@@ -172,7 +172,7 @@ Chainlink CCIP token transfers benefit from rate limits for additional security.
 
 <ClickToZoom src="/images/ccip/ccip-refill-rate-v03.webp" alt="Chainlink CCIP Detailed Architecture" />
 
-You can find the complete list of lanes and their rate limits on the [CCIP Supported Networks](/ccip/supported-networks) page.
+You can find the complete list of lanes and their rate limits on the [CCIP Supported Networks](/ccip/directory) page.
 
 The rate limits are enforced at both the source and destination blockchains for maximum security. If these rate limits are reached, descriptive errors with detailed information are generated and returned to the sender. This enables CCIP users to gracefully handle these errors within their dApps to preserve the end-user experience. A comprehensive list of errors and their descriptions is available on the [errors API reference](/ccip/api-reference/errors#ratelimiter) page.
 
@@ -180,7 +180,7 @@ The rate limits are enforced at both the source and destination blockchains for 
 
 For each supported token on each individual [lane](/ccip/concepts#lane), the token pool rate limit manages the total number of tokens that can be transferred within a given time. This limit is independent of the USD value of the token.
 
-For example, the maximum capacity of the suUSD token pool on the [Ethereum mainnet → Base mainnet lane](/ccip/supported-networks/v1_2_0/mainnet#ethereum-mainnet-base-mainnet) is 200,000 suUSD. The refill rate is 2 suUSD per second. If 200,000 suUSD are transferred on that lane, the entire capacity is consumed. After that, if a user wants to send 20 suUSD, they must wait at least 10 seconds as the capacity refills. The maximum throughput for this token on the lane is 1200 suUSD every 10 minutes.
+For example, the maximum capacity of the suUSD token pool on the [Ethereum mainnet → Base mainnet lane](/ccip/directory/mainnet/chain/ethereum-mainnet-base-1) is 200,000 suUSD. The refill rate is 2 suUSD per second. If 200,000 suUSD are transferred on that lane, the entire capacity is consumed. After that, if a user wants to send 20 suUSD, they must wait at least 10 seconds as the capacity refills. The maximum throughput for this token on the lane is 1200 suUSD every 10 minutes.
 
 ### Aggregate rate limit
 
