--- a/src/content/ccip/best-practices.mdx
+++ b/src/content/ccip/best-practices.mdx
@@ -2,7 +2,7 @@
 section: ccip
 date: Last Modified
 title: "CCIP Best Practices"
-whatsnext: { "Supported networks": "/ccip/supported-networks" }
+whatsnext: { "Supported networks": "/ccip/directory" }
 ---
 
 import { Aside } from "@components"
@@ -68,7 +68,7 @@ To estimate the accurate gas limit for your destination contract, consider the f
 
 ### Setting `allowOutOfOrderExecution`
 
-The `allowOutOfOrderExecution` parameter enables you to control the execution order of your messages on the destination blockchain. This parameter is part of [`EVMExtraArgsV2`](/ccip/api-reference/client#evmextraargsv2) and is available only on lanes where the **Out of Order Execution** property is set to **Optional** or **Required**. Refer to the [Supported Networks page](/ccip/supported-networks) to determine if your target lane supports this feature.
+The `allowOutOfOrderExecution` parameter enables you to control the execution order of your messages on the destination blockchain. This parameter is part of [`EVMExtraArgsV2`](/ccip/api-reference/client#evmextraargsv2) and is available only on lanes where the **Out of Order Execution** property is set to **Optional** or **Required**. Refer to the [Supported Networks page](/ccip/directory) to determine if your target lane supports this feature.
 
 #### Best Practices
 
@@ -96,7 +96,7 @@ Before securing value with contracts that implement CCIP interfaces and routers,
 
 ## Soak test your dApps
 
-Be aware of the [Service Limits and Rate Limits for Supported Networks](/ccip/supported-networks). Before you provide access to end users or secure value, soak test your cross-chain dApps. Ensure that your dApps can operate within these limits and operate correctly during usage spikes or unfavorable network conditions.
+Be aware of the [Service Limits and Rate Limits for Supported Networks](/ccip/directory). Before you provide access to end users or secure value, soak test your cross-chain dApps. Ensure that your dApps can operate within these limits and operate correctly during usage spikes or unfavorable network conditions.
 
 ## Monitor your dApps
 
