--- a/src/content/ccip/examples/index.mdx
+++ b/src/content/ccip/examples/index.mdx
@@ -3,7 +3,7 @@ section: ccip
 date: Last Modified
 title: "Example Cross-chain dApps and Tools"
 isIndex: true
-whatsnext: { "Supported networks": "/ccip/supported-networks", "Learn CCIP best practices": "/ccip/best-practices" }
+whatsnext: { "Supported networks": "/ccip/directory", "Learn CCIP best practices": "/ccip/best-practices" }
 ---
 
 import { Aside } from "@components"
