--- a/src/content/ccip/getting-started.mdx
+++ b/src/content/ccip/getting-started.mdx
@@ -8,7 +8,7 @@ whatsnext:
     "Learn how to transfer tokens and send data in a single CCIP transaction": "/ccip/tutorials/programmable-token-transfers",
     "Transfer Tokens Between EOAs": "/ccip/tutorials/cross-chain-tokens-from-eoa",
     "Learn how to send arbitrary data over CCIP": "/ccip/tutorials/send-arbitrary-data",
-    "See the list of supported networks": "/ccip/supported-networks",
+    "See the list of supported networks": "/ccip/directory",
   }
 ---
 
