--- a/src/content/ccip/index.mdx
+++ b/src/content/ccip/index.mdx
@@ -6,7 +6,7 @@ isIndex: true
 whatsnext:
   {
     "Complete the Getting Started guide to learn the basics": "/ccip/getting-started",
-    "See the list of supported networks": "/ccip/supported-networks",
+    "See the list of supported networks": "/ccip/directory",
     "Learn how to transfer tokens": "/ccip/tutorials/cross-chain-tokens",
     "Learn CCIP core concepts": "/ccip/concepts",
   }
