--- a/src/content/ccip/tutorials/cross-chain-tokens.mdx
+++ b/src/content/ccip/tutorials/cross-chain-tokens.mdx
@@ -6,7 +6,7 @@ whatsnext:
   {
     "Learn how to transfer tokens and send data in a single CCIP transaction": "/ccip/tutorials/programmable-token-transfers",
     "See example cross-chain dApps and tools": "/ccip/examples",
-    "See the list of supported networks": "/ccip/supported-networks",
+    "See the list of supported networks": "/ccip/directory",
     "Learn CCIP best practices": "/ccip/best-practices",
   }
 ---
