--- a/src/content/ccip/tutorials/send-arbitrary-data-receipt-acknowledgment.mdx
+++ b/src/content/ccip/tutorials/send-arbitrary-data-receipt-acknowledgment.mdx
@@ -5,7 +5,7 @@ title: "Send Arbitrary Data and Receive Transfer Confirmation: A -> B -> A"
 whatsnext:
   {
     "See example cross-chain dApps and tools": "/ccip/examples",
-    "See the list of supported networks": "/ccip/supported-networks",
+    "See the list of supported networks": "/ccip/directory",
     "Learn about CCIP Architecture and Billing": "/ccip/architecture",
     "Learn CCIP best practices": "/ccip/best-practices",
   }
