--- a/src/content/ccip/tutorials/send-arbitrary-data.mdx
+++ b/src/content/ccip/tutorials/send-arbitrary-data.mdx
@@ -6,7 +6,7 @@ whatsnext:
   {
     "Send Arbitrary Data and Receive Transfer Confirmation: A -> B -> A": "/ccip/tutorials/send-arbitrary-data-receipt-acknowledgment",
     "See example cross-chain dApps and tools": "/ccip/examples",
-    "See the list of supported networks": "/ccip/supported-networks",
+    "See the list of supported networks": "/ccip/directory",
     "Learn about CCIP Architecture and Billing": "/ccip/architecture",
     "Learn CCIP best practices": "/ccip/best-practices",
   }
