--- a/src/content/ccip/tutorials/manual-execution.mdx
+++ b/src/content/ccip/tutorials/manual-execution.mdx
@@ -6,7 +6,7 @@ whatsnext:
   {
     "Learn how to handle errors gracefully when making CCIP transactions": "/ccip/tutorials/programmable-token-transfers-defensive",
     "See example cross-chain dApps and tools": "/ccip/examples",
-    "See the list of supported networks": "/ccip/supported-networks",
+    "See the list of supported networks": "/ccip/directory",
     "Learn CCIP best practices": "/ccip/best-practices",
   }
 ---
