--- a/src/content/ccip/tutorials/programmable-token-transfers-defensive.mdx
+++ b/src/content/ccip/tutorials/programmable-token-transfers-defensive.mdx
@@ -6,7 +6,7 @@ whatsnext:
   {
     "Transfer Tokens Between EOAs": "/ccip/tutorials/cross-chain-tokens-from-eoa",
     "See example cross-chain dApps and tools": "/ccip/examples",
-    "See the list of supported networks": "/ccip/supported-networks",
+    "See the list of supported networks": "/ccip/directory",
     "Learn CCIP best practices": "/ccip/best-practices",
   }
 ---
