--- a/src/content/ccip/tutorials/programmable-token-transfers.mdx
+++ b/src/content/ccip/tutorials/programmable-token-transfers.mdx
@@ -8,7 +8,7 @@ whatsnext:
     "Learn how to handle errors gracefully when making CCIP transactions": "/ccip/tutorials/programmable-token-transfers-defensive",
     "Transfer Tokens Between EOAs": "/ccip/tutorials/cross-chain-tokens-from-eoa",
     "See example cross-chain dApps and tools": "/ccip/examples",
-    "See the list of supported networks": "/ccip/supported-networks",
+    "See the list of supported networks": "/ccip/directory",
     "Learn CCIP best practices": "/ccip/best-practices",
   }
 ---
