--- a/src/content/ccip/index.mdx
+++ b/src/content/ccip/index.mdx
@@ -89,21 +89,21 @@ export const exampleResources = [
     label: "Token Pool Types",
     description:
       "Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs. Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs...",
-    link: "/resources/token-pool-types",
+    link: "/",
     type: "article",
   },
   {
     label: "Token Pool Types",
     description:
       "Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs. Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs...",
-    link: "/resources/token-pool-types",
+    link: "/",
     type: "article",
   },
   {
     label: "Token Pool Types",
     description:
       "Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs. Explore the various token pool types supported by the Cross-Chain Token (CCT) standard with Chainlink Labs...",
-    link: "/resources/token-pool-types",
+    link: "/",
     type: "article",
   },
 ]
