improve mobile spacing

--- a/src/content/ccip/index.mdx
+++ b/src/content/ccip/index.mdx
@@ -19,6 +19,7 @@ import QuickLinkCard from "@components/QuickLinkCard/QuickLinkCard.astro"
 import ToolsUtilitiesGrid from "@components/ToolsUtilitiesGrid/ToolsUtilitiesGrid.astro"
 import MediaSection from "@components/MediaSection/MediaSection.astro"
 import CardsWrapper from "@components/Cards/CardsWrapper.astro"
+import OverviewWrapper from "@components/OverviewWrapper.astro"
 import {
   SvgEyeOptic,
   SvgTransactionRepeatRecurring,
@@ -293,14 +294,15 @@ export const cardLinks = [
   image="/images/ccip/ccip-hero.png"
 />
 
-<CardsWrapper links={cardLinks} />
-
-<TabGrid header="Tutorials" client:visible tabs={exampleTutorials} />
-<QuickLinkCard links={quickLinks} />
-<ToolsUtilitiesGrid links={toolsAndUtilities} />
-<ResourceSection title="Resources" resources={exampleResources} />
-<MediaSection
-  heading="High-level architecture"
-  description="CCIP delivers cross-chain messages from a source chain to a destination chain by combining offchain consensus and onchain execution components."
-  image="/images/architecture.png"
-/>
+<OverviewWrapper>
+  <CardsWrapper links={cardLinks} />
+  <TabGrid header="Tutorials" client:visible tabs={exampleTutorials} />
+  <QuickLinkCard links={quickLinks} />
+  <ToolsUtilitiesGrid links={toolsAndUtilities} />
+  <ResourceSection title="Resources" resources={exampleResources} />
+  <MediaSection
+    heading="High-level architecture"
+    description="CCIP delivers cross-chain messages from a source chain to a destination chain by combining offchain consensus and onchain execution components."
+    image="/images/architecture.png"
+  />
+</OverviewWrapper>
