add changelog stylin and elements

--- a/src/content/ccip/index.mdx
+++ b/src/content/ccip/index.mdx
@@ -20,6 +20,7 @@ import ToolsUtilitiesGrid from "@components/ToolsUtilitiesGrid/ToolsUtilitiesGri
 import MediaSection from "@components/MediaSection/MediaSection.astro"
 import CardsWrapper from "@components/Cards/CardsWrapper.astro"
 import OverviewWrapper from "@components/OverviewWrapper.astro"
+import ChangelogSnippet from "@components/ChangelogSnippet/ChangelogSnippet.astro"
 import {
   SvgEyeOptic,
   SvgTransactionRepeatRecurring,
