--- a/src/content/ccip/index.mdx
+++ b/src/content/ccip/index.mdx
@@ -301,6 +301,8 @@ export const cardLinks = [
   <QuickLinkCard links={quickLinks} />
   <ToolsUtilitiesGrid links={toolsAndUtilities} />
   <ResourceSection title="Resources" resources={exampleResources} />
+  <ChangelogSnippet query="ccip" />
+
   <MediaSection
     heading="High-level architecture"
     description="CCIP delivers cross-chain messages from a source chain to a destination chain by combining offchain consensus and onchain execution components."
